# CSOL-Utilities

./: .EditorConfig  .clang-format  .clangd  .gitattributes  .gitignore  .gitmodules  .luarc.jsonc  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CSOL-Utilities.drawio  CSOL-Utilities.sln  CSOL-Utilities.vcxproj  CSOL-Utilities.vcxproj.filters  Cargo.toml  ConfigPanel.tar  Configure.ps1  Controller.cmake  Controller.ps1  Executor.lua  Makefile  README.md  Settings.json  Test.cmake  package-lock.json  package.json  pwsh.mk  readme.md  sqlc.yaml  stylua.toml  vcpkg-configuration.json  vcpkg.json
.VSCodeCounter/2025-02-11_22-13-12/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-02-12_00-50-58/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-02-15_15-50-21/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
ConfigPanel/: GeneralSettings.html  Setting.html  Setting.json  WeaponList.html  WeaponTemplateList.json  index.html  tsconfig.json
ConfigPanel.old/: README.md  Setting.html  Setting.json  WeaponList.html
ConfigPanel.old/assets/: craft_parts_fill.avif  lobby_create_room_difficulty_1.avif  lobby_create_room_map_option.avif  lobby_list_rooms.avif  store_purchase_option.avif
ConfigPanel.old/scripts/: Version.js  Weapon.ts  luaparse.js
ConfigPanel.old/styles/: Glimmer.css  Setting.css  Tab.css  export.css
ConfigPanel.old/weapon_templates/: 【幽浮】控制核心.lua  万钧神威.lua  圣翼皓印.lua  炽翼魔印.lua  魔神开天.lua
ConfigPanel/assets/: lobby_create_room_2.avif  lobby_create_room_map_choose_finish.avif  lobby_create_room_map_choose_right_scroll.avif  store_purchase.avif
ConfigPanel/scripts/: CopyToClipboard.js  DisplayTab.js  Export.js  LuaASTUtil.js  LuaASTUtil.ts  Version.js  (+4 more)
Controller/: .clang-format  .clangd  .gitignore  CMakeLists.txt  Controller.cmd  Controller.exe.manifest  Controller.ps1  Controller.rc  InstallModels.ps1  Main.cpp  Makefile  NatvisFile.natvis  PostBuild.ps1  README.md  manifest.xml  models.ps1  vcpkg.json
Controller/cmake/: aho_corasick-config.cmake  aho_corasick.cmake  onnxruntime-config.cmake  onnxruntime.cmake
Controller/dependencies/include/: clipper.hpp
Controller/dependencies/include/aho_corasick/: aho_corasick.hpp
Controller/dependencies/source/: clipper.cpp
Controller/implementation/: AngleNet.cpp  CRNN.cpp  Command.cpp  CommandDispatcher.cpp  Console.cpp  DBNet.cpp  Driver.cpp  Global.cpp  HotKey.cpp  IdleEngine.cpp  LowLevelKeyboardHook.cpp  Main.cpp  OCR.cpp  OCRIdleEngine.cpp  OCRUtilities.cpp  Test.cpp  Utilities.cpp
Controller/include/: CSOBannerSuppressor.hpp  Classifier.hpp  ClassifierIdleEngine.hpp  Command.hpp  CommandDispatcher.hpp  Configuration.hpp  Console.hpp  Driver.hpp  Event.hpp  Exception.hpp  Global.hpp  HotKey.hpp  HotKey2.hpp  IdleEngine.hpp  LowLevelKeyboardHook.hpp  ModelUtilities.hpp  Module.hpp  NonCopyable.hpp  OCR.hpp  OCRIdleEngine.hpp  Server.hpp  Service.hpp  Utilities.hpp  pch.hpp
Controller/locales/: zh-CN.json  zh_CN.json
Controller/models/MobileNet/: train.py
Controller/models/OCR/: keywords.json
Controller/source/: AngleNet.cpp  CMakeLists.txt  CRNN.cpp  CSOBannerSuppressor.cpp  Classifier.cpp  ClassifierIdleEngine.cpp  Command.cpp  CommandDispatcher.cpp  Configuration.cpp  Console.cpp  DBNet.cpp  Driver.cpp  Global.cpp  HotKey.cpp  HotKey2.cpp  IdleEngine.cpp  LowLevelKeyboardHook.cpp  Main.cpp  ModelUtilities.cpp  OCR.cpp  OCRIdleEngine.cpp  OCRUtilities.cpp  OCR_Detector.cpp  OCR_Recognizer.cpp  Server.cpp  Test.cpp  Utilities.cpp
Controller/source/Configuration/: Executor.cpp  Game.cpp  Idle.cpp  Locale.cpp
Controller/testing/: CMakeLists.txt  Config.cpp  ConfigTests.cpp  Model.cpp  ServerTest.cpp  TestUtilities.cpp  TestUtilities.hpp
Database/: CompareAndHashPassword.py  ComputePasswordHash.py  accounts.sql  init.sql
Documentation/: design.rmd
Executor/: Automation.lua  Command.lua  Console.lua  Constants.lua  Context.lua  DateTime.lua  Delay.lua  Emulator.lua  Error.lua  Event.lua  Exception.lua  Global.d.lua  Install.cmd  Install.ps1  Interrupt.lua  JSON.lua  Keyboard.lua  Main.lua  Makefile  Mouse.lua  Player.lua  Routine.lua  Runtime.lua  Setting.lua  Temporary.lua  Utility.lua  Version.lua  Weapon.lua  WeaponList.lua
Manual/: Makefile  appendix_00.tex  appendix_00_multi-server-support.tex  chapter_00.tex  chapter_01.tex  chapter_02.tex  chapter_05.tex  chapter_06.tex  main.tex
Models/: .gitignore  README.md
NativePanel/: CMakeLists.txt
NativePanel/include/: Communication.hpp  MainWindow.hpp
NativePanel/source/: Communication.cpp  QMainWindow.cpp  main.cpp
Panel/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
Paper/: main.tex
Protocol/: .gitignore  CMakeLists.txt  Makefile
Protos/: CMakeLists.txt  Makefile
Protos/Controller/: Configuration.proto
Scheduler/: .gitignore  Makefile  config.yaml  go.mod  go.sum  main.go
Server/: go.sum
Shared/: Controller.proto
Tool/: .clangd  Ahk2Exe.ps1  CMakeLists.txt  Makefile
Tool/include/: Export.h
Tool/main/: Tool.ahk  Windows.ahk
Tool/scripts/: Tool.ahk  Tool.exe.manifest
Tool/source/: Export.cpp  WindowUtils.cpp
Tool/source/dll/: CursorClipper.cpp  CursorClipper.hpp  Export.h  Exports.cpp  Tool.h  ToolException.hpp  WindowUtils.cpp  WindowUtils.h
Tool/source/exe/: Main.ahk
WebPanel/: index.html  package.json  tsconfig.app.json
docs/: chapter_00.tex  chapter_02.tex  chapter_03.tex  chapter_05.tex  chapter_07.tex  main.tex
documents/: chapter_00.tex  chapter_01.tex  chapter_02.tex  chapter_04.tex  chapter_05.tex  chapter_06.tex  chapter_07.tex  main.tex
make/: JoinWith.mk  ReplaceDirectory.mk  cmake.mk  proxy.mk  pwsh.mk
manual/: Command.md  Design.md  Interrupt.md  Weapon.md
panel/: .gitignore  README.md  index.html  package-lock.json
powershell/: ReplaceDirectory.ps1
source/: Controller.ps1  Executor.lua  Main.lua  Setting.html  Weapon.html  install.ps1
(+347 files in other folders)
